--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ a{
     font-size: 30px;
     font-weight: normal;
     text-decoration: none;
-    padding-right: 5px;
+    padding-right: 5%;
 }
 
 /* text sizes */
