--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ a{
     font-size: 30px;
     font-weight: normal;
     text-decoration: none;
-    padding-right: 1%;
 }
 
 /* text sizes */
@@ -75,8 +74,8 @@ a{
 }
 
 .topBar{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
     background: #181818;
     border-radius: 100px;
     text-align: center;
