--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ a{
 }
 
 .topBar{
-    margin :auto;
+    display :inline-block;
     padding-left: 5%;
     padding-right: 5%;
     background: #181818;
